--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "clsx": "^2.1.1",
     "next": "15.2.1",
     "react": "^19.0.0",
