--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-next": "15.2.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.7.3",
     "next-router-mock": "^0.9.13",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
