--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "msw"
+    ]
   }
 }
