--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-fetch": "^4.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fixed-jsdom": "^0.0.9",
     "msw": "^2.7.3",
     "next-router-mock": "^0.9.13",
     "ts-jest": "^29.2.6",
